test/compile-fail/resolution/conflicts/impl/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:4:10
  |
3 |     fn b () {}
  |        - previous definition of the name `b` here
4 |     const b: c = false;
  |           ^ `b` redefined here
